// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token detail screen should accept DST 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 16,
            "paddingBottom": 32,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 32,
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(212, 212, 212, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(212, 212, 212, 1)",
            "borderRightColor": "rgba(212, 212, 212, 1)",
            "borderTopColor": "rgba(212, 212, 212, 1)",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="confirm_title"
      >
        AMOUNT BALANCE
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexWrap": "wrap",
                "fontFamily": "BoldFont",
                "fontSize": 24,
                "fontWeight": "700",
                "lineHeight": 32,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="token_detail_amount"
      >
        100,000.00000000 BTC
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontFamily": "MediumFont",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 24,
              },
            ],
            Object {
              "backgroundColor": "rgba(245, 245, 245, 1)",
              "color": "rgba(115, 115, 115, 1)",
            },
          ],
        ]
      }
      testID="title_available_options"
    >
      AVAILABLE OPTIONS
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="send_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Send to other wallet
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="receive_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Receive undefined
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`token detail screen should accept Token DFI 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 16,
            "paddingBottom": 32,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 32,
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(212, 212, 212, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(212, 212, 212, 1)",
            "borderRightColor": "rgba(212, 212, 212, 1)",
            "borderTopColor": "rgba(212, 212, 212, 1)",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="confirm_title"
      >
        AMOUNT BALANCE
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexWrap": "wrap",
                "fontFamily": "BoldFont",
                "fontSize": 24,
                "fontWeight": "700",
                "lineHeight": 32,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="token_detail_amount"
      >
        100,000.00000000 DFI
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontFamily": "MediumFont",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 24,
              },
            ],
            Object {
              "backgroundColor": "rgba(245, 245, 245, 1)",
              "color": "rgba(115, 115, 115, 1)",
            },
          ],
        ]
      }
      testID="title_available_options"
    >
      AVAILABLE OPTIONS
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="convert_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Convert to UTXO
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`token detail screen should accept UTXO DFI 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 16,
            "paddingBottom": 32,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 32,
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(212, 212, 212, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(212, 212, 212, 1)",
            "borderRightColor": "rgba(212, 212, 212, 1)",
            "borderTopColor": "rgba(212, 212, 212, 1)",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="confirm_title"
      >
        AMOUNT BALANCE
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexWrap": "wrap",
                "fontFamily": "BoldFont",
                "fontSize": 24,
                "fontWeight": "700",
                "lineHeight": 32,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="token_detail_amount"
      >
        100,000.00000000 DFI
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontFamily": "MediumFont",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 24,
              },
            ],
            Object {
              "backgroundColor": "rgba(245, 245, 245, 1)",
              "color": "rgba(115, 115, 115, 1)",
            },
          ],
        ]
      }
      testID="title_available_options"
    >
      AVAILABLE OPTIONS
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="send_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Send to other wallet
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="receive_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Receive undefined
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "flexDirection": "row",
          "opacity": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        }
      }
      testID="convert_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "flexGrow": 1,
                "marginLeft": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Convert to Token
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 24,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
